@@ -1,0 +1,11 @@
+// $Id$
+//
+// Copyright (c) 2010 greg Landrum
+//
+//   @@ All Rights Reserved  @@
+//
+#include <boost/version.hpp>
+namespace RDKit {
+  const char *rdkitVersion="2009Q4_1";
+  const char *boostVersion=BOOST_LIB_VERSION;
+}  
