@@ -1,4 +1,0 @@
-
-def version():
-    """ return the RDKit version (as a string) """
-    return "2009Q4_1"
