@@ -15,7 +15,7 @@
 
 Acknowledgements
   - Andrew Dalke, Kirk DeLisle, David Hall, Markus Kossner, Adrian
-    Schreyer, Jeremy Yang
+    Schreyer, Nikolaus Stiefl, Jeremy Yang
    
 Bug Fixes
   - the SMARTS parser now correctly requires tha atom-map numbers be
@@ -23,7 +23,8 @@ Bug Fixes
     (issue 1804420)
   - a bug in the way SMARTS matches are uniquified has been fixed
     (issue 2884178)
-
+  - a bug in the BRICS atom-typing rules that caused sulfonamides 
+    to be skipped has been fixed.  
     
 New Features
   - The new SMARTS atomic query feature "x" (number of ring bonds) is
@@ -31,6 +32,9 @@ New Features
   - The proof-of-concept for a SWIG-based wrapper around the RDKit has
     been expanded a bit in functionality. Samples are now included for
     Java, C#, and Python.
+  - Information about the current RDKit and boost versions is now
+    available from C++ (file RDGeneral/versions.h) and Python 
+    (rdBase.rdkitVersion and rdBase.boostVersion)
 
 Other
   - The supported build system for the RDKit is now cmake
